# gherkin-c

./: CMakeLists.txt
include/: string_token_scanner.h  token_scanner.h
src/: file_token_scanner.c  string_token_scanner.c  token_scanner.c
